<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plansWorkout.WorkoutActivityBeginner"
    android:background="@drawable/backround_app">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="408dp"
        android:layout_height="661dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90dp"
                android:text="@string/burbees"
                android:textAllCaps="true"
                android:textColor="@color/teal_200"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="347dp"
                android:layout_height="213dp"
                android:contentDescription="@string/blipeers"
                app:srcCompat="@drawable/burbees2" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <VideoView
                    android:id="@+id/videoView1"
                    android:layout_width="350dp"
                    android:layout_height="191dp" />
            </FrameLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/mountain"
                android:textColor="@color/teal_200"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="346dp"
                android:layout_height="258dp"
                android:contentDescription="@string/mountainclimbers"
                app:srcCompat="@drawable/mountainclimbers2" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <VideoView
                    android:id="@+id/videoView2"
                    android:layout_width="350dp"
                    android:layout_height="191dp" />

            </FrameLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/russianTwist"
                android:textAllCaps="true"
                android:textColor="@color/teal_200"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:contentDescription="@string/russiantwist"
                app:srcCompat="@drawable/russian_twist" />

            <VideoView
                android:id="@+id/videoView3"
                android:layout_width="match_parent"
                android:layout_height="191dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="84dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="386dp"
        android:layout_height="78dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/signOutBeginner"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_weight="1"
            android:text="@string/signOut"
            app:backgroundTint="@android:color/holo_red_dark" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/userBeginner"
            android:layout_width="68dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>