<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_76e2ebf69d406f1814f1ea1cca01cae"
    tools:context=".PlansFragment">

    <LinearLayout
        android:id="@+id/SignOutLayout"
        android:layout_width="353dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="115dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/signOut"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:insetLeft="0dp"
            android:text="@string/signOut"
            app:backgroundTint="@color/design_default_color_error" />

        <Space
            android:layout_width="108dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/userNameTv"
            android:layout_width="207dp"
            android:layout_height="42dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="342dp"
        android:layout_height="388dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="7dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignOutLayout">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="253dp"
            app:srcCompat="@drawable/circle_cropped"
            android:contentDescription="@string/imagePlans" />

        <EditText
            android:id="@+id/weightNumber"
            android:layout_width="323dp"
            android:layout_height="55dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enterWeight"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <Button
            android:id="@+id/buttonServer"
            android:layout_width="141dp"
            android:layout_height="0dp"
            android:layout_marginStart="200dp"
            android:layout_weight="1"
            android:onClick="sendMessage"
            android:text="@string/sendServer"
            android:textStyle="italic"
            app:backgroundTint="@android:color/holo_green_dark" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>