<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround_app">

    <LinearLayout
        android:layout_width="392dp"
        android:layout_height="651dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="match_parent"
            android:layout_height="267dp"
            app:srcCompat="@drawable/beginner2"
            android:contentDescription="@string/image" />

        <Button
            android:id="@+id/buttonBeginner"
            android:layout_width="289dp"
            android:layout_height="69dp"
            android:layout_marginStart="50dp"
            android:text="@string/beginner" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="85dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="650dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/signOutWorkout"
            android:layout_width="118dp"
            android:layout_height="59dp"
            android:text="@string/signOut"
            app:backgroundTint="@android:color/holo_red_dark" />

        <Space
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/userWorkout"
            android:layout_width="154dp"
            android:layout_height="44dp"
            android:textAllCaps="true"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>