<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plansWorkout.DietWorkoutBeginnerActivity"
    android:background="@drawable/backround_app">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="383dp"
        android:layout_height="59dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonSignOutDietWorkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="@string/signOut"
            app:backgroundTint="@android:color/holo_red_dark" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/userDietWorkout"
            android:layout_width="104dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="390dp"
        android:layout_height="654dp"
        android:layout_marginTop="3dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            app:srcCompat="@drawable/diet" />

        <Button
            android:id="@+id/buttonDiet"
            android:layout_width="331dp"
            android:layout_height="48dp"
            android:layout_marginLeft="35dp"
            android:text="@string/diet"
            app:backgroundTint="@color/teal_700" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            app:srcCompat="@drawable/exercise" />

        <Button
            android:id="@+id/buttonExercises"
            android:layout_width="322dp"
            android:layout_height="48dp"
            android:layout_marginLeft="35dp"
            android:text="@string/exercises"
            app:backgroundTint="@color/teal_700" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>